html中增加h1标题 input输入框 table表格

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,11 @@
 <html>
-<title>待办事项</title>
+<head>
+    <title>待办事项</title>
+</head>
+    <body>
+        <h1>你的待办事项列表</h1>
+        <input id="id_new_item" placeholder="请输入待办事项"/>
+        <table id="id_list_table">
+        </table>
+    </body>
 </html>
