将数据存入数据库 从数据库中读取数据并展示 增加展示前的序号

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,13 +5,13 @@
     <body>
         <h1>你的待办事项列表</h1>
         <form method="POST">
-            <input id="id_new_item" placeholder="请输入待办事项"/>
+            <input id="id_new_item" placeholder="请输入待办事项" name="item_text"/>
             {% csrf_token %}
         </form>
         <table id="id_list_table">
-            <tr>
-                <td>{{ new_item_text }}</td>
-            </tr>
+            {% for item in items %}
+                <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
+            {% endfor %}
         </table>
     </body>
 </html>
