--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -4,7 +4,7 @@
 </head>
     <body>
         <h1>新建一个待办事项列表</h1>
-        <form method="POST">
+        <form method="POST" action="/lists/new">
             <input id="item_text" placeholder="请输入待办事项" name="id_new_item"/>
             {% csrf_token %}
         </form>
