--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -4,7 +4,7 @@
 </head>
     <body>
         <h1>你的待办事项列表</h1>
-        <form method="POST" action="/">
+        <form method="POST" action="/lists/new">
             <input id="id_new_item" placeholder="请输入待办事项" name="item_text"/>
             {% csrf_token %}
         </form>
