第七章结束 调通单元测试 功能测试

--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -5,7 +5,7 @@
     <body>
         <h1>新建一个待办事项列表</h1>
         <form method="POST" action="/lists/new">
-            <input id="item_text" placeholder="请输入待办事项" name="id_new_item"/>
+            <input id="item_text" placeholder="请输入待办事项" name="item_text"/>
             {% csrf_token %}
         </form>
     </body>
