--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,14 +1,9 @@
-<html>
-<head>
-    <title>新建待办事项列表</title>
-</head>
-    <body>
-        <h1>新建一个待办事项列表</h1>
-        <form method="POST" action="/lists/new">
-            <p style="text-align: center">
-                <input id="item_text" placeholder="请输入待办事项" name="item_text"/>
-            </p>
-            {% csrf_token %}
-        </form>
-    </body>
-</html>
+{% extends 'base.html' %}
+
+{% block header_text %}
+    开始一个新的待办事项
+{% endblock %}
+
+{% block form_action %}
+    /lists/new
+{% endblock %}
