--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -1,17 +1,17 @@
-<html>
-<head>
-    <title>待办事项</title>
-</head>
-    <body>
-        <h1>你的待办事项列表</h1>
-        <form method="POST" action="/lists/{{ list.id }}/add_item">
-            <input id="id_new_item" placeholder="请输入待办事项" name="item_text"/>
-            {% csrf_token %}
-        </form>
-        <table id="id_list_table">
-            {% for item in list.item_set.all %}
-                <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
-            {% endfor %}
-        </table>
-    </body>
-</html>
+{% extends 'base.html' %}
+{% block header_text %}
+    你的待办事项
+{% endblock %}
+{% block form_action %}
+    /lists/{{ list.id }}/add_item
+{% endblock %}
+
+{% block table %}
+    <table id="id_list_table">
+        {% for item in list.item_set.all %}
+            <tr>
+                <td>{{ forloop.counter }}: {{ item.text }}</td>
+            </tr>
+        {% endfor %}
+    </table>
+{% endblock %}
