--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -1,14 +1,33 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>待办事项列表</title>
+    <link rel="stylesheet" href="/lists/static/bootstrap/css/bootstrap.min.css">
 </head>
     <body>
-        <h1>{% block header_text %}{% endblock %}</h1>
-        <form method="POST" action="{% block form_action %}{% endblock %}">
-            <input id="id_new_item" placeholder="请输入待办事项" name="item_text"/>
-            {% csrf_token %}
-        </form>
-    {% block table %}
-    {% endblock %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <div class="text-center">
+                    <h1>{% block header_text %}{% endblock %}</h1>
+                    <form method="POST" action="{% block form_action %}{% endblock %}">
+                        <input id="id_new_item" placeholder="请输入待办事项" name="item_text"/>
+                        {% csrf_token %}
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            {% block table %}
+            {% endblock %}
+        </div>
+    </div>
+
     </body>
 </html>
