--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>待办事项列表</title>
-    <link rel="stylesheet" href="/lists/static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/base.css">
 </head>
     <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-6 col-md-offset-3 jumbotron">
                 <div class="text-center">
                     <h1>{% block header_text %}{% endblock %}</h1>
                     <form method="POST" action="{% block form_action %}{% endblock %}">
-                        <input id="id_new_item" placeholder="请输入待办事项" name="item_text"/>
+                        <input id="id_new_item" placeholder="请输入待办事项" name="item_text" class="form-control input-lg"/>
                         {% csrf_token %}
                     </form>
                 </div>
