--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -3,7 +3,7 @@
     你的待办事项
 {% endblock %}
 {% block form_action %}
-    /lists/{{ list.id }}
+    {% url 'view_list' list.id %}
 {% endblock %}
 
 {% block table %}
